Implementing the header for MacBook version

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <!-- The "defer" in the script is only evaluated and executed once the entire page code has been parsed and loaded by the browser. -->
 </head>
 <body>
-<h2>Welcome to the "Tic Tac Toe" Game</h2>
+
+<header id="main-header">
+  <h1>Tic-Tac-Toe Game</h1>
+</header>
+
 </body>
 </html>
